FO: Fix the alignment of the delete button

--- a/themes/default-bootstrap/sass/product.scss
+++ b/themes/default-bootstrap/sass/product.scss
@@ -1036,7 +1036,7 @@ ul#text_fields {
 }
 .customizationUploadBrowse img + a {
 	position: relative;
-	top: -51px;
+	top: -25px;
 }
 #customizedDatas {
 	float: right;
